[package]
name = "nightfall"
version = "0.1.0"
authors = ["Valerian G. <valerian.garleanu@pm.me>"]
edition = "2018"

[dependencies]
uuid = { version = "0.8.1", features = ["v4"] }
lazy_static = "1.4.0"
serde_json = "1.0.57"
serde = { version = "1.0.115", features = ["derive"] }
serde_derive = "1.0.115"
cfg-if = "1.0.0"
err-derive = "0.3.0"
xtra = "0.5.1"
async-trait = "0.1.49"
slog = "2.7.0"
xtra_proc = "0.1.0"

[target.'cfg(unix)'.dependencies]
nix = "0.20.0"
psutil = "3.2.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "*", features = ["winerror", "synchapi", "minwinbase"] }
ntapi = "*"
