[package]
name = "nightfall"
version = "0.2.3"
authors = ["Valerian G. <valerian.garleanu@pm.me>"]
edition = "2018"
license = "GPL-2.0"
description = "Nightfall is a library allowing on-demand video transcoding and streaming."
repository = "https://github.com/vgarleanu/nightfall"
documentation = "https://docs.rs/nightfall"

[dependencies]
uuid = { version = "0.8.1", features = ["v4"] }
lazy_static = "1.4.0"
serde_json = "1.0.57"
serde = { version = "1.0.115", features = ["derive"] }
serde_derive = "1.0.115"
cfg-if = "1.0.0"
err-derive = "0.3.0"
xtra = "0.5.1"
async-trait = "0.1.49"
slog = "2.7.0"
xtra_proc = "0.1.0"
tokio = { version = "1.5.0", features = ["process", "io-util", "io-std", "macros", "time", "rt"] }
tokio-stream = { version = "0.1.5", features = ["io-util"] }
mp4 = { git = "https://github.com/vgarleanu/mp4-rust" }

[target.'cfg(unix)'.dependencies]
nix = "0.20.0"
psutil = "3.2.0"
rusty_vainfo = "0.1.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "^0.3.9", features = ["winerror", "synchapi", "minwinbase"] }
ntapi = "^0.3.6"
