[package]
name = "basic"
version = "0.1.0"
authors = ["Valerian G. <valerian.garleanu@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nightfall = { path = "../../" }
rocket = "0.4.5"
chrono = "0.4.13"
rocket_cors = "0.5.2"
inotify = "0.9.2"
